Update unit test for keycloak install